<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tournament Creator"
            android:textSize="24sp"
            android:fontFamily="@font/exo2_bold"
            android:gravity="center"
            android:layout_marginBottom="16dp" />

        <!-- Tournament Name -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter the name of the tournament:"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/etTournamentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Tournament Name"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:layout_marginBottom="16dp" />

        <!-- Tournament Type -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select the format of the tournament:"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <Spinner
            android:id="@+id/spinnerTournamentType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <!-- Number of Teams -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select the number of teams:"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <Spinner
            android:id="@+id/spinnerNumTeams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <!-- Team Names -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter the names of the teams:"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <LinearLayout
            android:id="@+id/layoutTeamNames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp" />

        <!-- Privacy -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choose the privacy of the tournament:"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <Spinner
            android:id="@+id/spinnerPrivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <!-- Description -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add a description for the tournament:"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Description"
            android:lines="3"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:layout_marginBottom="16dp" />

<!--        &lt;!&ndash; Upload Photo Button &ndash;&gt;-->
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Upload a photo for the tournament:"-->
<!--            android:textSize="16sp"-->
<!--            android:layout_marginBottom="4dp" />-->

<!--        <Button-->
<!--            android:id="@+id/btnUploadPhoto"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Upload Photo"-->
<!--            android:layout_marginBottom="16dp" />-->

        <!-- Submit Button -->
        <Button
            android:id="@+id/btnSubmitTournament"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Create Tournament"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_border"
            android:fontFamily="@font/exo2_bold"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="8dp" />
    </LinearLayout>
</ScrollView>
