...
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="4dp">

    <!-- Tournament Name -->
    <TextView
        android:id="@+id/tvTournamentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:fontFamily="@font/exo2_black"
        android:singleLine="true"
        android:ellipsize="end"
...
        android:fontFamily="@font/exo2_bold"
        android:ellipsize="end"
        android:layout_marginBottom="4dp" />

    <!-- Tournament Description -->
    <TextView
        android:id="@+id/tvTournamentDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:singleLine="true"
        android:ellipsize="end"
        android:layout_marginBottom="8dp" />
...
